# docs/swagger.json
@@ -25,7 +25,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/api.SuccessResponse"
+                                    "$ref": "#/definitions/rest.SuccessResponse"
                                 },
                                 {
                                     "type": "object",
@@ -44,7 +44,7 @@
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/api.FailResponse"
+                            "$ref": "#/definitions/rest.FailResponse"
                         }
                     }
                 }
@@ -78,7 +78,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/api.SuccessResponse"
+                                    "$ref": "#/definitions/rest.SuccessResponse"
                                 },
                                 {
                                     "type": "object",
@@ -96,7 +96,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/api.FailResponse"
+                                    "$ref": "#/definitions/rest.FailResponse"
                                 },
                                 {
                                     "type": "object",
@@ -141,7 +141,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/api.SuccessResponse"
+                                    "$ref": "#/definitions/rest.SuccessResponse"
                                 },
                                 {
                                     "type": "object",
@@ -157,7 +157,7 @@
                     "404": {
                         "description": "Product Not Found",
                         "schema": {
-                            "$ref": "#/definitions/api.FailResponse"
+                            "$ref": "#/definitions/rest.FailResponse"
                         }
                     }
                 }
@@ -199,7 +199,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/api.SuccessResponse"
+                                    "$ref": "#/definitions/rest.SuccessResponse"
                                 },
                                 {
                                     "type": "object",
@@ -217,7 +217,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/api.FailResponse"
+                                    "$ref": "#/definitions/rest.FailResponse"
                                 },
                                 {
                                     "type": "object",
@@ -236,7 +236,7 @@
                     "404": {
                         "description": "Product Not Found",
                         "schema": {
-                            "$ref": "#/definitions/api.FailResponse"
+                            "$ref": "#/definitions/rest.FailResponse"
                         }
                     }
                 }
@@ -264,13 +264,13 @@
                     "200": {
                         "description": "Success deleted",
                         "schema": {
-                            "$ref": "#/definitions/api.SuccessResponse"
+                            "$ref": "#/definitions/rest.SuccessResponse"
                         }
                     },
                     "404": {
                         "description": "Product Not Found",
                         "schema": {
-                            "$ref": "#/definitions/api.FailResponse"
+                            "$ref": "#/definitions/rest.FailResponse"
                         }
                     }
                 }
@@ -278,39 +278,6 @@
         }
     },
     "definitions": {
-        "api.FailResponse": {
-            "type": "object",
-            "properties": {
-                "errors": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "string"
-                    }
-                },
-                "message": {
-                    "type": "string",
-                    "example": "There were validation errors"
-                },
-                "success": {
-                    "type": "boolean",
-                    "example": false
-                }
-            }
-        },
-        "api.SuccessResponse": {
-            "type": "object",
-            "properties": {
-                "data": {},
-                "message": {
-                    "type": "string",
-                    "example": "Operation completed successfully"
-                },
-                "success": {
-                    "type": "boolean",
-                    "example": true
-                }
-            }
-        },
         "product.productResponse": {
             "type": "object",
             "properties": {
@@ -353,6 +320,39 @@
                     "type": "integer",
                     "minimum": 0,
                     "example": 10
+                }
+            }
+        },
+        "rest.FailResponse": {
+            "type": "object",
+            "properties": {
+                "errors": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
+                },
+                "message": {
+                    "type": "string",
+                    "example": "There were validation errors"
+                },
+                "success": {
+                    "type": "boolean",
+                    "example": false
+                }
+            }
+        },
+        "rest.SuccessResponse": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "message": {
+                    "type": "string",
+                    "example": "Operation completed successfully"
+                },
+                "success": {
+                    "type": "boolean",
+                    "example": true
                 }
             }
         }
